--- a/app/src/main/res/layout/fragment_column_header.xml
+++ b/app/src/main/res/layout/fragment_column_header.xml
@@ -1,30 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:layout_margin="10dp">
 
-    <TextView
-        android:id="@+id/column_title"
+
+    <ImageView
+        android:id="@+id/chevron"
+        android:visibility="gone"
+        android:src="@drawable/chevron_down"
+        android:layout_gravity="end|center_vertical"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="10dp"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_regular"
-        android:text="Column Title"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        tools:ignore="HardcodedText" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/column_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/noto_sans_light"
-        android:text="Column Description"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        tools:ignore="HardcodedText" />
+        <TextView
+            android:id="@+id/column_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_regular"
+            android:text="Column Title"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            tools:ignore="HardcodedText" />
 
+        <TextView
+            android:id="@+id/column_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_light"
+            android:text="Column Description"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            tools:ignore="HardcodedText" />
+
+    </LinearLayout>
 </LinearLayout>
-
