--- a/app/src/main/res/layout/full_recycler_view.xml
+++ b/app/src/main/res/layout/full_recycler_view.xml
@@ -4,4 +4,4 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"/>
+    android:background="@drawable/gradient_title"/>
