--- a/app/src/main/res/layout/item_simpleuser.xml
+++ b/app/src/main/res/layout/item_simpleuser.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/thinsky"
+    android:background="@color/lightBackground"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:layout_marginBottom="2dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:foreground="?attr/selectableItemBackground"
-        android:background="@color/colorPrimary">
+        android:foreground="?attr/selectableItemBackground">
 
         <ImageView
             android:id="@+id/simpleuser_profilePicture"
