--- a/app/src/main/res/layout/item_usertoken.xml
+++ b/app/src/main/res/layout/item_usertoken.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@color/lightBackground"
+    android:layout_marginTop="1dp"
     android:gravity="center_vertical"
+    android:layout_marginBottom="2dp"
     android:orientation="horizontal">
 
     <ImageView
