--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,10 @@
     <color name="white">#FFFFFF</color>
     <color name="thinsky">#83D5ff</color>
     <color name="colorPrimary">#73c5f7</color>
-    <color name="colorPrimaryDark">#5bbbf5</color>
+    <color name="colorPrimaryDark">#01579B</color>
     <color name="colorPrimaryDeepDark">#139df1</color>
     <color name="spotlightBackground">#dF000000</color>
+    <color name="lightBackground">#2Fffffff</color>
     <color name="black">#000000</color>
     <color name="colorAccent">#37FADC</color>
     <color name="semiwhite">#cccccc</color>
