기부 페이지에 개발자 프로필 추가, 상위 버전의 기기에서 이미지가 불러와지지 않는 문제 수정 (http 배제)

--- a/app/src/main/res/layout/item_sku.xml
+++ b/app/src/main/res/layout/item_sku.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/lightBackground"
     android:layout_marginBottom="2dp"
+    android:foreground="?attr/selectableItemBackground"
     android:paddingTop="@dimen/listitem_vertical_padding"
     android:paddingRight="@dimen/listitem_horizontal_padding"
     android:paddingBottom="@dimen/listitem_vertical_padding"
