--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="purple">#ba68c8</color>
     <color name="red">#e53935</color>
     <color name="yellow">#FFD600</color>
+    <color name="bluegrey">#546e7a</color>
 </resources>
