--- a/app/src/main/res/layout/activity_chain_block.xml
+++ b/app/src/main/res/layout/activity_chain_block.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/_input1"
@@ -59,6 +59,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:hintTextAppearance="@style/WhitecolorText"
+            android:theme="@style/WhiteTextInputLayout"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -88,6 +89,7 @@
 
     <ScrollView
         android:id="@+id/layout_second"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
