--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="android:colorBackground">@color/colorPrimaryDark</item>
     </style>
 
+    <style name="WhiteTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">#fff</item>
+        <item name="boxStrokeWidth">2dp</item>
+    </style>
     <style name="WhitecolorText" parent="TextAppearance.AppCompat" >
         <item name="android:textColor">@color/white</item>
     </style>
