조건 추가 화면 추가

--- a/app/src/main/res/layout/activity_select_hetzer_type.xml
+++ b/app/src/main/res/layout/activity_select_hetzer_type.xml
@@ -4,19 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Hetzer.New.ActivitySelectHetzerType">
 
-    <Button
-        android:id="@+id/button_whitelist"
-        android:layout_width="150dp"
-        android:text="WhiteList"
-        android:textAllCaps="false"
-        android:layout_height="150dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_whitelist"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:text="WhiteList"
+            android:textAllCaps="false" />
+
+        <Button
+            android:id="@+id/button_blacklist"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:text="BlackList"
+            android:textAllCaps="false" />
+
+    </LinearLayout>
 
     <Button
-        android:id="@+id/button_blacklist"
-        android:layout_width="150dp"
-        android:text="BlackList"
-        android:textAllCaps="false"
-        android:layout_height="150dp"/>
+        android:id="@+id/button_addCondition"
+        android:text="@string/AddCondition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:id="@+id/temp_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical" />
+
 </LinearLayout>
