--- a/app/src/main/res/layout/item_logicpair.xml
+++ b/app/src/main/res/layout/item_logicpair.xml
@@ -40,6 +40,19 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
+        <RelativeLayout
+            android:id="@+id/layout_noItem"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/noto_sans_bold"
+                android:textColor="@color/white"
+                android:layout_centerInParent="true"
+                android:text="@string/NoLogic"/>
+        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
