--- a/app/src/main/res/layout/activity_logicpair.xml
+++ b/app/src/main/res/layout/activity_logicpair.xml
@@ -13,11 +13,40 @@
         layout="@layout/fragment_title_with_desc" />
 
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="6dp"
+            android:background="@color/white" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_light"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:text="@string/HetzerDescription"
+            android:textColor="@color/white" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="12dp"
+            android:background="@color/white" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/button_addLP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
         android:orientation="horizontal"
@@ -43,6 +72,7 @@
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -55,31 +85,19 @@
     </ScrollView>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="6dp"
-            android:background="@color/white" />
+        android:id="@+id/layout_noItem"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:layout_weight="1">
         <TextView
             android:layout_width="match_parent"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_light"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:text="@string/HetzerDescription"
-            android:textColor="@color/white" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="12dp"
-            android:background="@color/white" />
+            android:fontFamily="@font/noto_sans_bold"
+            android:textColor="@color/white"
+            android:layout_marginTop="60dp"
+            android:text="@string/NoLogic"/>
     </LinearLayout>
 
     <Button
