--- a/app/src/main/res/layout/activity_block_clear.xml
+++ b/app/src/main/res/layout/activity_block_clear.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
+    android:background="@drawable/gradient_title"
     tools:context=".ChainBlock.BlockClearActivity">
 
     <LinearLayout
@@ -38,6 +38,30 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:background="@drawable/roundrect_white_opacity"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/noto_sans_light"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:text="@string/BlockClearWarning"
+            android:textColor="@color/white" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
     <Button
         android:id="@+id/button_ok"
         android:layout_width="match_parent"
@@ -48,7 +72,7 @@
         android:layout_marginRight="@dimen/listitem_horizontal_padding"
         android:layout_marginBottom="20dp"
         android:background="@drawable/roundrect_white_5dp"
-        android:fontFamily="@font/noto_sans_light"
+        android:fontFamily="@font/noto_sans_bold"
         android:foreground="?attr/selectableItemBackground"
         android:text="@string/Run"
         android:textColor="@color/colorPrimaryDark"
