--- a/app/src/main/res/layout/activity_logicpair.xml
+++ b/app/src/main/res/layout/activity_logicpair.xml
@@ -13,6 +13,7 @@
         layout="@layout/fragment_title_with_desc" />
 
     <LinearLayout
+        android:id="@+id/text_warning"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
